--- a/src/styles/pages/TechShowcasePage.css
+++ b/src/styles/pages/TechShowcasePage.css
@@ -330,7 +330,7 @@
 }
 
 .skw-page__description:first-of-type {
-  margin-left: -120px;
+  margin-left: -100px;
   margin-bottom: 45px;
 }
 
